# catboost-server-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  model.cbm
proto/: cb.proto
src/: client.rs  predict.rs  server.rs
